--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,16 @@
 .App {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .title {
   font-weight: 200;
   margin: 0;
+}
+.articles_container {
+  display: flex;
+  align-items: center;
+  gap: 150px;
 }
 .article_list {
   display: flex;
@@ -34,4 +39,23 @@
   color: #FFF;
   border: none;
   background: none;
+}
+
+.article_modal_container {
+  border: 1.2px solid #938CBE;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  width: 40%;
+}
+
+.article_modal > button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin: 0 auto;
 }
