--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,11 +47,13 @@
 }
 
 .article_modal_container {
+  align-self: start;
   border: 1.2px solid #938CBE;
   border-radius: 5px;
   padding: 20px;
   text-align: center;
   width: 40%;
+  margin-top: 7em;
 }
 
 .article_modal > button {
